[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-stock-research"
version = "1.0.0"
description = "OpenClaw投研分析系统 - A股/港股数据分析工具集"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenClaw Team", email = "team@openclaw.com"}
]
keywords = ["stock", "finance", "akshare", "a-share", "hk-stock", "quant", "openclaw"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# 核心依赖
dependencies = [
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # 金融数据源
    "akshare>=1.11.0,<2.0.0",

    # 网络请求
    "requests>=2.28.0",
    "urllib3>=1.26.0",

    # 数据验证
    "pydantic>=2.0.0",

    # 日期时间处理
    "python-dateutil>=2.8.0",

    # 工具库
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# 性能优化
perf = [
    "lxml>=4.9.0",
    "orjson>=3.8.0",
    "aiohttp>=3.8.0",
    "aiodns>=3.0.0",
]

# 所有可选依赖
all = [
    "openclaw-stock-research[dev,perf]"
]

[project.urls]
Homepage = "https://github.com/openclaw/openclaw-stock-research"
Documentation = "https://openclaw-stock-research.readthedocs.io"
Repository = "https://github.com/openclaw/openclaw-stock-research.git"
"Bug Tracker" = "https://github.com/openclaw/openclaw-stock-research/issues"
Changelog = "https://github.com/openclaw/openclaw-stock-research/blob/main/CHANGELOG.md"

[build.targets.wheel]
packages = ["src/openclaw_stock"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
